--- a/Styles/_variables.scss
+++ b/Styles/_variables.scss
@@ -94,3 +94,4 @@ $colorful-shadow: 5px 5px 15px 5px #ff8080, -9px 5px 15px 5px #ffe488,
 $titlesShadow: 6px 0 6px #a408ff, 5px 5px 5px #d26df7,
   0 6px 6px rgba(79, 164, 250, 0.7215686275);
 $smilyLips: rgb(246, 70, 205);
+$paragraph-BG: #f2d7ffab;
